mem_dbg/tests/snapshots/test_optional_types_insta__follow_refs@x86_64.snap
---
source: mem_dbg/tests/test_optional_types_insta.rs
expression: output
---
 221 B 100.00% ⏺: test_optional_types_insta::OptionalTypes<'_>
  16 B   7.24% ├╴a_box: aliasable::boxed::AliasableBox<u64>
  44 B  19.91% ├╴a_vec: aliasable::vec::AliasableVec<i32>
  81 B  36.65% ├╴a_vec_str: aliasable::vec::AliasableVec<alloc::string::String>
  29 B  13.12% ├╴a_string: aliasable::string::AliasableString
  16 B   7.24% ├╴a_mut: aliasable::mut_ref::AliasableMut<'_, u64> @ 0x[ADDR_1]
   8 B   3.62% │ ├╴: u64
   8 B   3.62% ├╴md_flat: maybe_dangling::maybe_dangling::MaybeDangling<u64>
  27 B  12.22% ╰╴md_heap: maybe_dangling::maybe_dangling::MaybeDangling<alloc::vec::Vec<u8>>
